--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,7 @@
     <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title_left }}<span>{{ site.title_right }}</span></a></h1>
     <ul class="navbar">
       <li><a href="{{ '/ueber_uns' | prepend: site.baseurl | prepend: site.url }}">Über uns</a></li>
+      <li><a href="{{ '/kontakt' | prepend: site.baseurl | prepend: site.url }}">Kontakt</a></li>
       <li><a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" target="_blank">RSS</a></li>
     </ul>
   </div>
