fix background color

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -95,7 +95,7 @@ code {
   font-size: 1em;
   margin: 0;
   padding: 0 5px;
-  background-color: lighten($light-gray-color, 13%);
+  background-color: lighten($dark-gray-color, 13%);
 }
 
 pre {
