--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -309,7 +309,7 @@ code {
   font-size: 1em;
   margin: 0;
   padding: 0 5px;
-  background-color: #ededed;
+  background-color: #545454;
 }
 
 pre {
