--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,4 +96,5 @@
   {% endif %}
 
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css"| prepend: site.baseurl | prepend: site.url }}">
 </head>
