--- a/docs/_includes/intro.html
+++ b/docs/_includes/intro.html
@@ -1,5 +1,5 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Willkommen bei der CyberJUG &ndash; eine deutschsprachige Java User Group im  Cyberspace!</p>
+    <p class="lead">Willkommen bei der CyberJUG &ndash; einer deutschsprachigen Java User Group im  Cyberspace!</p>
   </div>
 </section>
