--- a/docs/_includes/nav.html
+++ b/docs/_includes/nav.html
@@ -3,9 +3,11 @@
   <div class="container">
     <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title_left }}<span>{{ site.title_right }}</span></a></h1>
     <ul class="navbar">
+      <li><a href="{{ '/aktuelles' | prepend: site.baseurl | prepend: site.url }}">Aktuelles</a></li>
+      <li><a href="{{ '/mitmachen' | prepend: site.baseurl | prepend: site.url }}">Mitmachen!</a></li>
       <li><a href="{{ '/ueber' | prepend: site.baseurl | prepend: site.url }}">Über</a></li>
       <li><a href="{{ '/kontakt' | prepend: site.baseurl | prepend: site.url }}">Kontakt</a></li>
-      <li><a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" target="_blank">RSS</a></li>
+      <li><a href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}" target="_blank">RSS</a></li>
     </ul>
   </div>
 </nav>
