--- a/docs/_layouts/news.html
+++ b/docs/_layouts/news.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post container" itemscope itemtype="http://schema.org/BlogPosting">
   <header class="post-header">
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-      {{ page.date | date: "%d.%m.%Y %H:%M" }} Uhr
+      Neues vom {{ page.date | date: "%d.%m.%Y"}}
      </time>{% if page.author %} &middot; <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
   </header>
