get more social

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,5 +1,13 @@
 <footer class="site-footer">
   <div class="container">
-    <small class="block">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} &middot; &lt;/&gt; Powered by <a href="https://jekyllrb.com/">Jekyll</a> and <a href="https://github.com/heiswayi/thinkspace">Thinkspace theme</a></small>
+    <small class="block">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} &middot;
+      <a href="https://twitter.com/cyberjug"><i class="fa fa-twitter"></i></a>
+      <a href="https://github.com/cyberjug/website"><i class="fa fa-github"></i></a>
+      <a href="https://jvm-german.slack.com/archives/CPPEFQZ0T"><i class="fa fa-slack"></i></a>
+      <a href="https://www.youtube.com/channel/UC6GC-2REbNELyMDNXGCBcIA"><i class="fa fa-youtube"></i></a>
+      &lt;/&gt;
+      Powered by <a href="https://jekyllrb.com/">Jekyll</a> and
+      <a href="https://github.com/heiswayi/thinkspace">Thinkspace theme</a>
+    </small>
   </div>
 </footer>
