set cyber green for links

--- a/docs/assets/scss/base/_typography.scss
+++ b/docs/assets/scss/base/_typography.scss
@@ -50,7 +50,7 @@ p {
 }
 
 a {
-  color: $action-color;
+  color: $cyber-green-color;
   text-decoration: none;
   transition: color $base-duration $base-timing;
 
