--- a/docs/assets/scss/_layout.scss
+++ b/docs/assets/scss/_layout.scss
@@ -55,7 +55,7 @@ hr {
 }
 
 .link {
-  color: $terminal-amber-color;
+  color: $cyber-green-color;
   padding-bottom: .05em;
   border-bottom: 2px solid transparent;
 
@@ -64,7 +64,7 @@ hr {
   &:hover,
   &:focus,
   &:active {
-    border-bottom: 2px solid $terminal-amber-color;
+    border-bottom: 2px solid $cyber-green-color;
   }
 }
 
@@ -139,7 +139,8 @@ hr {
   display: block;
 
   a {
-    color: $action-color;
+    color: $cyber-green-color;  
+
 
     &:hover,
     &:focus,
