add code of conduct

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -5,7 +5,8 @@
       <a href="https://github.com/cyberjug/website"><i class="fa fa-github"></i></a>
       <a href="https://jvm-german.slack.com/archives/CPPEFQZ0T"><i class="fa fa-slack"></i></a>
       <a href="https://www.youtube.com/channel/UC6GC-2REbNELyMDNXGCBcIA"><i class="fa fa-youtube"></i></a> &middot;
-      Aktueller Sponsor: <a href="https://www.innoq.com">INNOQ</a>
+      Sponsor: <a href="https://www.innoq.com">INNOQ</a> &middot;
+      <a href="{{ '/conduct' | prepend: site.baseurl | prepend: site.url }}">COC</a> &middot;
       &lt;/&gt;
       Powered by <a href="https://jekyllrb.com/">Jekyll</a> and
       <a href="https://github.com/heiswayi/thinkspace">Thinkspace theme</a>
