--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="site-footer">
   <div class="container">
     <small class="block">&copy; {{ site.time | date: '%Y' }} {{ site.author.name }} &middot;
+      <a href="https://meetup.com/cyberjug"><i class="fa fa-meetup"></i></a>
       <a href="https://twitter.com/cyberjug"><i class="fa fa-twitter"></i></a>
       <a href="https://github.com/cyberjug/website"><i class="fa fa-github"></i></a>
       <a href="https://jvm-german.slack.com/archives/CPPEFQZ0T"><i class="fa fa-slack"></i></a>
