--- a/docs/assets/scss/_variables.scss
+++ b/docs/assets/scss/_variables.scss
@@ -25,8 +25,8 @@ $dark-gray-color: #333;
 $medium-gray-color: #999;
 $light-gray-color: #ccc;
 
-$terminal-amber-color: #FFBF00;
-$cyber-green-color: #00FF00;
+$terminal-amber-color: #ccc;
+$cyber-green-color: #ccc;
 
 $primary-color: $terminal-amber-color;
 $action-color: $primary-color;
